--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
-  width: 390px;
+  width: 90%;
   height: 475px;
   display: flex;
   flex-direction: column;
